GNOME Bugzilla – Bug 755860
nleoperation: leaks srcpad
Last modified: 2015-10-01 09:53:52 UTC
The return of gst_pad_get_peer should be freed.
Created attachment 312407 [details] [review] unref srcpad
commit a8546584044e057d446709af6ad51be491d8c5a7 Author: Justin Kim <justin.kim@collabora.com> Date: Wed Sep 30 17:11:20 2015 +0900 nleoperation: don't leak srcpad https://bugzilla.gnome.org/show_bug.cgi?id=755860