nleoperation: don't leak srcpad

https://bugzilla.gnome.org/show_bug.cgi?id=755860